[package]
name = "rimio-s3-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "S3-compatible gateway router and protocol handlers for Rimio"

[dependencies]
axum = { version = "0.7" }
async-trait = "0.1"
bytes = "1.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
